# zelda3

./: .gitignore  CMakeLists.txt
src/: main.c  opengl.c
src/platform/psp/: zelda3.ini
